Add simplex noise, so not all sectors have solar systems

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <canvas id="canvas"></canvas>
 
         <script src="library/seedrandom.min.js"></script>
+        <script src="library/noise.min.js"></script>
         <script src="script/main.js"></script>
 
     </body>
