Use vectors, every object keeps track of its own sector coordinates

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <body>
 
-        <canvas id="canvas"></canvas>
+        <div class="frame">
+            <canvas id="canvas"></canvas>
+        </div>
 
         <script src="library/seedrandom.min.js"></script>
         <script src="library/noise.min.js"></script>
