Add fuel tracking, make canvas resize to fit screen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <body>
 
         <div class="frame">
-            <canvas id="canvas"></canvas>
+            <div class="screen">
+                <canvas id="canvas"></canvas>
+            </div>
         </div>
 
         <script src="library/seedrandom.min.js"></script>
