Use black and white graphics, fix mouse offset

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <body>
 
-        <div class="frame">
-            <div class="screen">
+        <div id="frame">
+            <div id="screen">
                 <canvas id="canvas"></canvas>
             </div>
         </div>
