Add background music, adjust game position in js to get it to fit in the page properly

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <body>
 
         <div id="frame">
-            <div id="screen">
-                <canvas id="canvas"></canvas>
-            </div>
+            <canvas id="canvas"></canvas>
         </div>
+
+        <!-- BACKGROUND MUSIC-->
+	    <audio src="audio/fwimmygoat_-_04_-_somber_beauty.mp3" autoplay loop display="none"></audio>
 
         <script src="library/seedrandom.min.js"></script>
         <script src="library/noise.min.js"></script>
