--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Xyzygy</title>
 
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui">
 
         <link rel="stylesheet" type="text/css" href="style/main.css">
 
